# cpp_template_cmake_gtest

./: .gitignore  CMakeLists.txt
src/: main.cpp
